# elevation_mapping_with_localization

./: .gitignore  README.md  run.launch
src/common/utils/include/: ground_filter.hpp
src/driver/autolabor/autolabor_keyboard_control/script/: add_keyboard_udev
src/driver/autolabor/autolabor_pro1_driver/: 升级说明【必读】.txt
src/driver/eth_xsens_driver/launch/: xsens_driver.launch
src/driver/realsense/realsense2_camera/launch/: rs_camera.launch
src/driver/velodyne_online/: readme.txt
src/driver/velodyne_online/velodyne_pointcloud/launch/: VLP16_points.launch
src/elevation_mapping/elevation_mapping/elevation_mapping/src/: ElevationMap.cpp  ElevationMapping.cpp  elevation_mapping_node.cpp
src/elevation_mapping/elevation_mapping/elevation_mapping_demos/config/: param_all.yaml
src/elevation_mapping/elevation_mapping/elevation_mapping_demos/launch/: realsense_demo.launch  simple_demo.launch  visualization.launch
src/elevation_mapping/elevation_mapping/elevation_mapping_demos/rviz/: elevation_map_visualization.rviz  elevation_map_visualization1.rviz
src/imu/: CMakeLists.txt
src/imu/include/odom_imu/: odom_imu.h
src/imu/launch/: odom_imu.launch
src/imu/src/: IMUFilter.cpp  IMUFilter.h  odom_imu.cpp  odom_imu_node.cpp
src/localization/ndt_localization/launch/: ndt_localization.launch
src/localization/ndt_localization/params/: test.yaml
src/localization/ndt_localization/src/: ndt_localization.cpp
src/localization/robot_pose_ekf/launch/: robot_pose_ekf.launch
src/localization/robot_pose_ekf/src/: nonlinearanalyticconditionalgaussianodo.cpp  odom_estimation.cpp  odom_estimation_node.cpp
src/msgs/can_msgs/: CMakeLists.txt
src/msgs/can_msgs/msg/: brake.msg  ecu.msg
src/perception/lidar_freespace/: CMakeLists.txt  package.xml
src/perception/lidar_freespace/launch/: lidar_freespace.launch
src/perception/lidar_freespace/src/: freespace.cpp  freespace.h
src/perception/pointcloud_to_laserscan/launch/: pointcloud_to_laserscan.launch
src/perception/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp  pointcloud_to_laserscan_nodelet.cpp
src/perception/ray_ground_filter/: CMakeLists.txt
src/perception/ray_ground_filter/include/: ray_ground_filter_core.h
src/perception/ray_ground_filter/launch/: ray_ground_filter.launch
src/perception/ray_ground_filter/src/: ray_ground_filter.cpp
src/perception/road_space_detector/: CMakeLists.txt  README.md  package.xml
src/perception/road_space_detector/include/: road_space_detector.h
src/perception/road_space_detector/launch/: road_space_detector.launch
src/perception/road_space_detector/src/: road_space_detector_core.cpp
(+23 files in other folders)
